ci(android): add CI workflow and helper scripts to build APK

--- a/android/local.properties
+++ b/android/local.properties
@@ -3,3 +3,4 @@ flutter.sdk=/workspaces/speew/flutter
 # sdk.dir=/home/<user>/Android/Sdk
 # Alternatively, run:
 # flutter config --android-sdk /path/to/Android/Sdk
+sdk.dir=/caminho/para/Android/Sdk
